[package]
name = "fedito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lenient_scheme = []

[dependencies]
cookie = {version = "0.16.0", default-features = false}
tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
tower-cookies = "0.8.0"
serde = {version = "1.0.151", features = ["derive"]}
axum-extra = {version = "0.4.2", features = ["query"]}
tower-service = {version = "0.3.2"}
tower = {version = "0.4.13", default-features = false, features = ["util"]}
percent-encoding = "2.2.0"
minijinja = "0.27.0"
time = {version = "0.3.5", default-features = false}
url = "2.3.1"

[dependencies.axum]
version = "0.6.1"
default-features = false
features = ["http1", "http2", "query", "tokio", "macros"]

[dependencies.tower-http]
version = "0.3.5"
default-features = false
features = ["fs", "set-header"]

[profile.release]
debug = 1
